--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ body {
     align-items: center;
     flex-direction: column;
     background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);    
-    height: 100vh;
-    width: 100vw;
+  
 }
 
 .title {
@@ -121,3 +120,31 @@ input:focus {
     background-color: rgb(0, 255, 98);
 }
 
+@media screen and (max-width: 500px) {
+    .container {
+        padding: 0;
+    }
+
+    input {
+        width: 20rem;
+    }
+}
+
+@media screen and (max-width: 360px) {
+  
+    .form {
+        padding: 2rem 3rem;
+    }
+    input {
+        width: 18rem;
+    }
+}
+
+@media screen and (max-width: 320px) {
+   
+
+   
+    input {
+        width: 15rem;
+    }
+}
